--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
   </head>
   <body>
 
-    <h1>Hello</h1>
+    <h1 id="title">Hello</h1>
 
     <input type="checkbox">
 
-    <button style=":active color:red;">Click Me</button>
+    <button class="btn">Click Me</button>
 
-    <ul>
-      <li class="list">
+    <ul id="list">
+      <li class="item">
         <a href="https://www.google.com">Google</a>
       </li>
-      <li class="list">Second</li>
-      <li class="list">Third</li>
+      <li class="item">Second</li>
+      <li class="item">Third</li>
     </ul>
 
-    <script src=index.js></script>
-
   </body>
+  <footer>
+      <script src="index.js" charset="utf-8"></script>
+  </footer>
 
 </html>
